# chatgpt-export-to-sqlite

./: README.md  pyproject.toml
chatgpt_export_to_sqlite/: cli.py
tests/: test_chatgpt_export_to_sqlite.py
