[project]
name = "chatgpt-export-to-sqlite"
version = "0.1"
description = "Convert ChatGPT to SQLite"
readme = "README.md"
authors = [{name = "Ram Vasuthevan"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/RamVasuthevan/chatgpt-export-to-sqlite"
Changelog = "https://github.com/RamVasuthevan/chatgpt-export-to-sqlite/releases"
Issues = "https://github.com/RamVasuthevan/chatgpt-export-to-sqlite/issues"
CI = "https://github.com/RamVasuthevan/chatgpt-export-to-sqlite/actions"

[project.scripts]
chatgpt-export-to-sqlite = "chatgpt_export_to_sqlite.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
